# jaredweakly.com

./: .ghcid  .gitignore  Caddyfile  README.md  cabal.project  default.nix  fourmolu.yaml  jaredweakly.cabal  jaredweakly.nix  justfile  package.yaml  release.nix  shell.nix  stack.yaml
app/: Main.hs  Pandoc.hs
nix/: default.nix  sources.json
site/: _redirects
site/blog/: beginner-mistakes-and-oddities-i-encountered.md  halfway-there.md  haskell-summer-of-code.md
site/css/: base.css  home.css  reset.css  scale.css  style.css  syntax.css
site/pages/: about.md  index.md  projects.md  test.md
site/posts/: sample-post.md
site/templates/: archive.html  directory.html  footer.html  head.html  header.html  home.html  index.html  meta-data.html  nav.html  page.html  pages.html  post.html
src/: LucidGen.hs  Main.hs  Templates.hs  TypeOfHtml.hs  Utils.hs
