cabal-version: 1.12

name:           jaredweakly
version:        0.1.0.0
synopsis:       My website
description:    My personal website.
category:       Website
homepage:       https://github.com/jared-w/jaredweakly.com#readme
bug-reports:    https://github.com/jared-w/jaredweakly.com/issues
author:         Jared Weakly
maintainer:     jaredweakly@gmail.com
copyright:      2019 Jared Weakly
license:        MIT
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/jared-w/jaredweakly.com

executable build
  main-is: Main.hs
  other-modules:
      Pandoc
  hs-source-dirs:
      app
  default-extensions: DataKinds DeriveAnyClass DeriveGeneric DuplicateRecordFields FlexibleContexts GADTs LambdaCase OverloadedStrings PolyKinds RankNTypes RecordWildCards ScopedTypeVariables TemplateHaskell TypeApplications TypeFamilies TypeOperators NamedFieldPuns
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:
      aeson
    , base >=4.7 && <5
    , containers
    , hasmin
    , lens
    , lens-aeson
    , pandoc
    , pandoc-emphasize-code
    , pandoc-types
    , process
    , shake
    , slick
    , text
    , time
    , unordered-containers
  default-language: Haskell2010
