cabal-version: 2.4
name:          jaredweakly
version:       0.1.0.0
license:       MIT
maintainer:    jaredweakly@gmail.com
author:        Jared Weakly
category:      Web

executable site
  main-is:          Main.hs
  hs-source-dirs:   src
  default-language: Haskell2010
  other-modules:
    LucidGen
    Templates
    TypeOfHtml
    Utils

  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns

  build-depends:
    , aeson
    , async
    , base
    , clay
    , filepath
    , lucid
    , mtl
    , mustache
    , pandoc
    , pandoc-types
    , retry
    , rib                   >=1.0
    , rib-core              >=1.0
    , shake
    , shake-minify-css
    , text
    , time
    , type-of-html
    , unordered-containers
    , with-utf8
